--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
+    "art_vandelay = art.\"art vandelay\" # 'Art Vandelay'\n",
     "art_vandelay"
    ]
   },
