Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,12 +180,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "web_address = \"www.\"'vandelay.com' # 'www.vandelay.com'\n",
+    "web_address = \"www.\" + \"vandelay.com\" # 'www.vandelay.com'\n",
     "web_address"
    ]
   },
